--- a/app/src/main/res/layout/form_kembalian.xml
+++ b/app/src/main/res/layout/form_kembalian.xml
@@ -7,18 +7,18 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/form_debit"
+        android:id="@+id/form_kembalian"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/card_number"
+        <TextView
+            android:id="@+id/tv_kembalian"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorBlack"
-            android:inputType="number"
+            android:textAlignment="center"
             android:textSize="30sp"/>
 
     </LinearLayout>
