--- a/app/src/main/res/layout/activity_cashier.xml
+++ b/app/src/main/res/layout/activity_cashier.xml
@@ -7,51 +7,83 @@
 
     <LinearLayout
         android:id="@+id/line"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
         android:weightSum="2"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-            <TextView
+            <ImageView
+                android:id="@+id/btn_scan"
+                android:background="@drawable/border_card"
+                android:src="@drawable/ic_barcode"
                 android:layout_width="match_parent"
-                android:text="Cashier: Rizqy F"
-                android:textColor="@color/colorBlack"
-                android:textSize="18sp"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:textColor="@color/colorBlack"
-                android:text="2019-12-12"
-                android:textSize="20sp"
-                android:layout_height="wrap_content" />
+                android:layout_height="70dp" />
 
         </LinearLayout>
 
-
-        <ImageView
-            android:id="@+id/btn_scan"
-            android:layout_weight="1"
-            android:layout_marginStart="5dp"
-            android:layout_width="match_parent"
-            android:src="@drawable/ic_barcode"
-            android:layout_height="70dp" />
-
     </LinearLayout>
+
+    <!--<LinearLayout-->
+        <!--android:id="@+id/line"-->
+        <!--android:layout_below="@+id/lin"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:weightSum="2"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_marginEnd="5dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent">-->
+
+            <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:text="Cashier: Rizqy F"-->
+                <!--android:textColor="@color/colorBlack"-->
+                <!--android:textSize="18sp"-->
+                <!--android:layout_height="wrap_content" />-->
+
+            <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:textColor="@color/colorBlack"-->
+                <!--android:text="2019-12-12"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_height="wrap_content" />-->
+
+        <!--</LinearLayout>-->
+
+
+        <!--<ImageView-->
+            <!--android:id="@+id/btn_scan"-->
+            <!--android:layout_weight="1"-->
+            <!--android:layout_marginStart="5dp"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:src="@drawable/ic_barcode"-->
+            <!--android:layout_height="70dp" />-->
+
+    <!--</LinearLayout>-->
+
+    <!--<View-->
+        <!--android:id="@+id/view2"-->
+        <!--android:layout_below="@+id/line"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="2dp"-->
+        <!--android:background="#CFCFCF"/>-->
 
     <RelativeLayout
         android:layout_below="@+id/line"
         android:layout_above="@+id/line_bottom"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
         android:padding="5dp"
         android:layout_height="match_parent">
 
@@ -61,132 +93,142 @@
             android:layout_height="wrap_content"/>
 
         <LinearLayout
-            android:layout_marginTop="5dp"
             android:id="@+id/line2"
             android:layout_above="@+id/linear"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="4"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
+            <View
                 android:layout_width="match_parent"
-                android:textSize="18sp"
-                android:layout_marginStart="5dp"
-                android:text="Subtotal"
-                android:layout_height="wrap_content" />
+                android:layout_height="2dp"
+                android:background="#CFCFCF"/>
 
-            <TextView
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
+            <LinearLayout
+                android:weightSum="2"
+                android:layout_marginVertical="15dp"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:textSize="18sp"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv_total_price"
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
-                android:layout_width="match_parent"
-                android:textSize="18sp"
-                android:textAlignment="textEnd"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Sub Total"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
-                android:layout_width="match_parent"
-                android:textSize="18sp"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/tv_total_price"
+                    android:layout_weight="1"
+                    android:textColor="@color/colorBlack"
+                    android:layout_width="match_parent"
+                    android:textSize="18sp"
+                    android:textAlignment="textEnd"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="30dp"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linear"
             android:layout_above="@+id/linear2"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="4"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
+            <View
                 android:layout_width="match_parent"
-                android:textSize="18sp"
-                android:layout_marginStart="5dp"
-                android:text="Tax"
-                android:layout_height="wrap_content" />
+                android:layout_height="2dp"
+                android:background="#CFCFCF"/>
 
-            <TextView
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
+            <LinearLayout
+                android:weightSum="2"
+                android:layout_marginVertical="15dp"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:textSize="18sp"
-                android:text="PPN 10%"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv_total_tax"
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
-                android:layout_width="match_parent"
-                android:textSize="18sp"
-                android:textAlignment="textEnd"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:textColor="@color/colorBlack"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:text="Tax PPN 10%"
+                    android:layout_height="wrap_content" />
 
-            <TextView
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
-                android:layout_width="match_parent"
-                android:textSize="18sp"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/tv_total_tax"
+                    android:layout_weight="1"
+                    android:textColor="@color/colorBlack"
+                    android:layout_width="match_parent"
+                    android:textSize="18sp"
+                    android:textAlignment="textEnd"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="30dp"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linear2"
             android:layout_alignParentBottom="true"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="4"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
+            <View
                 android:layout_width="match_parent"
-                android:textSize="20sp"
-                android:layout_marginStart="5dp"
-                android:textStyle="bold"
-                android:text="Total"
-                android:layout_height="wrap_content" />
+                android:layout_height="2dp"
+                android:background="#CFCFCF"/>
 
-            <TextView
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
+            <LinearLayout
+                android:weightSum="2"
+                android:layout_marginVertical="15dp"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:textSize="20sp"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv_total_price2"
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
-                android:layout_width="match_parent"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:textAlignment="textEnd"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:textColor="@color/colorBlack"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:text="Total"
+                    android:layout_height="wrap_content" />
 
-            <TextView
-                android:layout_weight="1"
-                android:textColor="@color/colorBlack"
-                android:layout_width="match_parent"
-                android:textSize="20sp"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/tv_total_price2"
+                    android:layout_weight="1"
+                    android:textColor="@color/colorBlack"
+                    android:layout_width="match_parent"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textAlignment="textEnd"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="30dp"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
