--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:background="@color/colorPrimaryDark"
     tools:context=".View.MainActivity">
+
+    <ImageView
+        android:layout_alignParentBottom="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/bg_pos3"
+        android:layout_width="match_parent"
+        android:layout_height="250dp" />
+
+    <LinearLayout
+        android:layout_margin="10dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_username"
@@ -19,7 +29,7 @@
         android:text="Welcome back, Rizqy"/>
 
     <LinearLayout
-        android:background="@drawable/border_card"
+        android:background="@drawable/border_card_blue"
         android:orientation="horizontal"
         android:padding="10dp"
         android:layout_width="match_parent"
@@ -257,41 +267,47 @@
 
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/btn_employee"
-            android:layout_width="match_parent"
+        <TextView
             android:layout_weight="1"
-            app:cardCornerRadius="5dp"
             android:layout_margin="10dp"
-            android:layout_height="120dp">
+            android:layout_width="match_parent"
+            android:layout_height="120dp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:padding="5dp"
-                android:background="@drawable/border_card"
-                android:layout_height="match_parent">
+        <!--<androidx.cardview.widget.CardView-->
+            <!--android:id="@+id/btn_employee"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--app:cardCornerRadius="5dp"-->
+            <!--android:layout_margin="10dp"-->
+            <!--android:layout_height="120dp">-->
 
-                <ImageView
-                    android:layout_marginTop="5dp"
-                    android:layout_width="90dp"
-                    android:src="@drawable/ic_employee"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_height="70dp" />
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:orientation="vertical"-->
+                <!--android:padding="5dp"-->
+                <!--android:background="@drawable/border_card"-->
+                <!--android:layout_height="match_parent">-->
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:text="Employee"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    android:layout_height="wrap_content" />
+                <!--<ImageView-->
+                    <!--android:layout_marginTop="5dp"-->
+                    <!--android:layout_width="90dp"-->
+                    <!--android:src="@drawable/ic_employee"-->
+                    <!--android:layout_gravity="center_horizontal"-->
+                    <!--android:layout_height="70dp" />-->
 
-            </LinearLayout>
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:text="Employee"-->
+                    <!--android:textColor="@color/colorPrimaryDark"-->
+                    <!--android:textAlignment="center"-->
+                    <!--android:textStyle="bold"-->
+                    <!--android:layout_height="wrap_content" />-->
 
-        </androidx.cardview.widget.CardView>
+            <!--</LinearLayout>-->
+
+        <!--</androidx.cardview.widget.CardView>-->
 
     </LinearLayout>
+    </LinearLayout>
 
-
-</LinearLayout>
+</RelativeLayout>
