--- a/app/src/main/res/layout/activity_pembayaran.xml
+++ b/app/src/main/res/layout/activity_pembayaran.xml
@@ -6,16 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:padding="10dp"
-    android:layout_height="match_parent"
-    tools:context=".View.PembayaranActivity">
-
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp"
-        android:text="Total belanja:"/>
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_total_price"
@@ -23,44 +14,97 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorBlack"
-        android:textStyle="bold"
-        android:textSize="24sp"/>
+        android:textAlignment="center"
+        android:text="0"
+        android:textSize="30sp"/>
 
     <TextView
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp"
-        android:text="Bayar dengan:"/>
+        android:textAlignment="center"
+        android:textSize="16sp"
+        android:text="Jumlah keseluruhan"/>
 
-    <LinearLayout
-        android:layout_marginTop="10dp"
+    <TextView
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="2"
-        android:layout_height="180dp">
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="15sp"
+        android:text="Bayar dengan :"/>
 
-        <Button
-            android:id="@+id/btn_debit"
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/btn_debit"
+        android:layout_marginTop="30dp"
+        app:cardCornerRadius="5dp"
+        android:elevation="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:weightSum="2"
+            android:background="@drawable/btn_bg"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:textColor="@color/colorWhite"
-            android:text="Debit"
-            android:layout_marginEnd="5dp"
-            android:background="@color/colorPrimaryDark"
-            android:layout_height="match_parent" />
+            android:layout_height="50dp">
 
-        <Button
-            android:id="@+id/btn_cash"
+            <TextView
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:paddingEnd="10dp"
+                android:drawableEnd="@drawable/ic_debit"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:text="DEBIT"
+                android:textColor="@color/colorWhite"
+                android:textSize="18sp"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/btn_cash"
+        android:layout_marginVertical="30dp"
+        app:cardCornerRadius="5dp"
+        android:elevation="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:weightSum="2"
+            android:background="@drawable/btn_bg"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:textColor="@color/colorWhite"
-            android:text="Cash"
-            android:layout_marginStart="5dp"
-            android:background="@color/colorPrimaryDark"
-            android:layout_height="match_parent"/>
+            android:layout_height="50dp">
 
-    </LinearLayout>
+            <TextView
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:paddingEnd="10dp"
+                android:drawableEnd="@drawable/ic_local_atm"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:text="CASH"
+                android:textColor="@color/colorWhite"
+                android:textSize="18sp"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
