--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
     tools:context=".View.AddStoreActivity">
+
+    <ImageView
+        android:layout_alignParentBottom="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/bg_pos3"
+        android:layout_width="match_parent"
+        android:layout_height="250dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,8 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorBlack"
-            android:inputType="text"
-            android:textSize="18sp"/>
+            android:textSize="20sp"/>
 
 
         <TextView
@@ -50,8 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorBlack"
-            android:inputType="text"
-            android:textSize="18sp"/>
+            android:textSize="20sp"/>
 
         <TextView
             android:layout_marginTop="10dp"
@@ -65,9 +69,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorBlack"
-            android:inputType="text"
-            android:textSize="18sp"/>
+            android:textSize="20sp"/>
 
     </LinearLayout>
 
-</ScrollView>
+</RelativeLayout>
