--- a/app/src/main/res/layout/form_cash.xml
+++ b/app/src/main/res/layout/form_cash.xml
@@ -12,13 +12,6 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorBlack"
-            android:textSize="18sp"
-            android:text="Uang diterima:"/>
-
         <EditText
             android:id="@+id/edt_cash"
             android:layout_marginTop="10dp"
@@ -26,7 +19,36 @@
             android:layout_height="wrap_content"
             android:textColor="@color/colorBlack"
             android:inputType="number"
-            android:textSize="22sp"/>
+            android:textSize="30sp"/>
+
+        <LinearLayout
+            android:layout_marginTop="15dp"
+            android:weightSum="2"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btn_50"
+                android:layout_weight="1"
+                android:background="@drawable/btn_bg"
+                android:layout_width="match_parent"
+                android:text="50.000"
+                android:layout_marginEnd="5dp"
+                android:textColor="@color/colorWhite"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/btn_100"
+                android:layout_weight="1"
+                android:background="@drawable/btn_bg"
+                android:layout_width="match_parent"
+                android:text="100.000"
+                android:layout_marginStart="5dp"
+                android:textColor="@color/colorWhite"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
