--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:weightSum="2"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:paddingVertical="10dp"
+    android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_marginStart="10dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
+        android:weightSum="2"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -16,26 +15,10 @@
             android:id="@+id/tv_name"
             android:textColor="@color/colorBlack"
             android:layout_width="match_parent"
+            android:layout_weight="1"
             android:textSize="18sp"
             android:text="Nama Product"
             android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tv_code"
-            android:textColor="@color/colorBlack"
-            android:layout_width="match_parent"
-            android:textSize="15sp"
-            android:text="ID Product"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_weight="1"
-        android:weightSum="2"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tv_price"
@@ -49,13 +32,20 @@
 
         <TextView
             android:id="@+id/tv_cancel"
-            android:layout_width="match_parent"
+            android:layout_width="30dp"
             android:textSize="18sp"
-            android:layout_weight="1"
             android:gravity="center"
             android:text="X"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_code"
+        android:textColor="@color/colorBlack"
+        android:layout_width="match_parent"
+        android:textSize="15sp"
+        android:text="ID Product"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
