--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/colorWhite"
     android:layout_height="match_parent"
     tools:context=".View.MainActivity">
 
@@ -267,45 +268,39 @@
 
         </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:layout_weight="1"
-            android:layout_margin="10dp"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/btn_employee"
             android:layout_width="match_parent"
-            android:layout_height="120dp" />
+            android:layout_weight="1"
+            app:cardCornerRadius="5dp"
+            android:layout_margin="10dp"
+            android:layout_height="120dp">
 
-        <!--<androidx.cardview.widget.CardView-->
-            <!--android:id="@+id/btn_employee"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--app:cardCornerRadius="5dp"-->
-            <!--android:layout_margin="10dp"-->
-            <!--android:layout_height="120dp">-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:padding="5dp"
+                android:background="@drawable/border_card"
+                android:layout_height="match_parent">
 
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:orientation="vertical"-->
-                <!--android:padding="5dp"-->
-                <!--android:background="@drawable/border_card"-->
-                <!--android:layout_height="match_parent">-->
+                <ImageView
+                    android:layout_marginTop="5dp"
+                    android:layout_width="90dp"
+                    android:src="@drawable/ic_employee"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_height="70dp" />
 
-                <!--<ImageView-->
-                    <!--android:layout_marginTop="5dp"-->
-                    <!--android:layout_width="90dp"-->
-                    <!--android:src="@drawable/ic_employee"-->
-                    <!--android:layout_gravity="center_horizontal"-->
-                    <!--android:layout_height="70dp" />-->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:text="Employee"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:layout_height="wrap_content" />
 
-                <!--<TextView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:text="Employee"-->
-                    <!--android:textColor="@color/colorPrimaryDark"-->
-                    <!--android:textAlignment="center"-->
-                    <!--android:textStyle="bold"-->
-                    <!--android:layout_height="wrap_content" />-->
+            </LinearLayout>
 
-            <!--</LinearLayout>-->
-
-        <!--</androidx.cardview.widget.CardView>-->
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
     </LinearLayout>
