--- a/app/src/main/res/layout/activity_pembayaran.xml
+++ b/app/src/main/res/layout/activity_pembayaran.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:padding="10dp"
     android:layout_height="match_parent">
