--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     tools:context=".View.StartActivity">
 
     <ImageView
@@ -121,14 +122,6 @@
                         android:inputType="textPassword"
                         android:textSize="18sp"
                         tools:ignore="TextFields" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/colorGreen"
-                        android:textSize="16sp"
-                        android:textAlignment="textEnd"
-                        android:text="Lupa password"/>
 
                     <Button
                         android:id="@+id/btn_login"
